add&fix:添加创建，删除，更新用户功能。修改结构体默认值显示
